# urano

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
.urano/: project_info.txt
assets/: urano_icon2.jpg~
assets/pages/: welcome.md
assets/styles/: oblivion2.xml  terminal_colors.txt
css/: theme.css
glade/: ui.glade  ui.glade~
include/: file_browser.h  file_explorer.h  file_reader.h  notebook.h  project_handler.c  project_handler.h  terminal_emulator.h  utils.h
src/: file_browser.cc  file_browser.cpp  file_explorer.cpp  file_reader.c  file_reader.cpp  file_tree_view.c  main  main.c  main.cc  main.cpp  main.cpp~  my_header.cpp~  notebook.c  project_handler.c  project_handler.cpp  terminal_emulator.cpp  utils.cpp
src/functions/: constants.h  functions.c  functions.h  utils.c  utils.h
src/notebooks/: notebook.c  notebook.h
src/terminals/: terminal_emulator.c  terminal_emulator.h
src/treeviews/: file_tree_view.h
